--- a/docs/1. Начало/1. Приветствие.md
+++ b/docs/1. Начало/1. Приветствие.md
@@ -4,7 +4,7 @@ slug: /
 
 **Приветствую тебя, Первый Игрок!**
 
-![](../static/img/дикарка.jpg)
+![](../../static/img/дикарка.jpg)
 
 **Миру нужны герои. Ты - избранный! И пророчество гласит, что ты САМЫЙ ВАЖНЫЙ, самый талантливый, интересный и необыкновенный человек во вселенной.**
 
