--- a/docs/1. Начало/2. РПГ Органайзер.md
+++ b/docs/1. Начало/2. РПГ Органайзер.md
@@ -1,4 +1,4 @@
-![](../static/img/4N0IoOfsCjU.jpg)
+![](../../static/img/4N0IoOfsCjU.jpg)
 
 [РПГ Органайзер](http://nerdistway.blogspot.com/2013/07/mylife-rpg-organizer.html) - это новейшая платформа, которая делает саморазвитие простым и веселым.
 
