--- a/docs/1. Начало/3. Получение и настройка РПГ Органайзера.md
+++ b/docs/1. Начало/3. Получение и настройка РПГ Органайзера.md
@@ -1,4 +1,4 @@
-![Картинки по запросу "гном кузнец"](../static/img/gnome_draft.jpg)
+![Картинки по запросу "гном кузнец"](../../static/img/gnome_draft.jpg)
 
 ## Получение
 
@@ -12,17 +12,17 @@
 
 Войди, используя Гугл аккаунт.
 
-![](../static/img/логин.jpg)
+![](../../static/img/логин.jpg)
 
 Если все нормально, попадешь на главный экран:
 
-![](../static/img/ГлавноеОкно.jpg)
+![](../../static/img/ГлавноеОкно.jpg)
 
 ## Настройка
 
 При запуске странички на телефоне тебе будет предложено "**добавить РПГ Органайзер на главный экран**". Соглашайся, так будет намного удобнее пользоваться (альтернативный способ - нажми Меню→Домашний экран).
 
-![](../static/img/добавитьПриложениеАндроид.jpg)
+![](../../static/img/добавитьПриложениеАндроид.jpg)
 
 После этих действий "РПГ Органайзер" преобразуется в полноценное приложение! Чтобы открыть его - запусти из своего списка установленных программ.
 
