--- a/docs/2. Основные понятия/1. Игрофикация.md
+++ b/docs/2. Основные понятия/1. Игрофикация.md
@@ -1,4 +1,4 @@
-![Картинки по запросу "игрофикация"](../static/img/Игрофикация.jpg)
+![Картинки по запросу "игрофикация"](../../static/img/Игрофикация.jpg)
 
 Главная фишка РПГ Органайзера - игрофикация.Такая штука, чтобы сделать твою личную прокачку интересным занятием.
 
