--- a/docs/2. Основные понятия/10. Очки навыков.md
+++ b/docs/2. Основные понятия/10. Очки навыков.md
@@ -1,4 +1,4 @@
-![](../static/img/ОчкиНавыков.jpg)
+![](../../static/img/ОчкиНавыков.jpg)
 
 Если ты вот так сразу возьмешь и запланируешь 100500 дел и кинешься развивать 100500 навыков, скорее всего ты будешь обречен на поражение! Мотивации не хватит, а привычка действовать эффективно пока не сформировалась.
 
