--- a/docs/2. Основные понятия/11. Монстры.md
+++ b/docs/2. Основные понятия/11. Монстры.md
@@ -1,4 +1,4 @@
-![](../static/img/Монстры.jpg)
+![](../../static/img/Монстры.jpg)
 
 В РПГ играх персонажи ежедневно сражаются с противниками. За удачные сражения они получают опыт и тем самым совершенствуются…
 
