--- a/docs/2. Основные понятия/12. Зачем.md
+++ b/docs/2. Основные понятия/12. Зачем.md
@@ -1,8 +1,8 @@
 ---
-title: 'Зачем все это нужно?'
+title: '12. Зачем все это нужно?'
 ---
 
-![](../static/img/question.jpg)
+![](../../static/img/question.jpg)
 
 Все эти штуки нужны, чтобы ты мог спланировать ПУТЬ ГЕРОЯ. Четко увидеть, каким ты хочешь быть, какие шаги для этого нужны.
 
