--- a/docs/2. Основные понятия/3. Характеристики.md
+++ b/docs/2. Основные понятия/3. Характеристики.md
@@ -1,4 +1,4 @@
-![](../static/img/характеристики.jpg)
+![](../../static/img/характеристики.jpg)
 
 Главная мера крутости персонажа в РПГ Играх - характеристики. 
 
