--- a/docs/2. Основные понятия/5. Перки.md
+++ b/docs/2. Основные понятия/5. Перки.md
@@ -1,4 +1,4 @@
-![](../static/img/Перк.jpg)
+![](../../static/img/Перк.jpg)
 
 Перки (особенности) - это твои преимущества, некая особенная черта, элемент личности, отличительная особенность игрового персонажа.  Вообще - это очень распространенное понятие в РПГ играх, наибольшую известность они получили в игре [Fallaut](https://fallout.fandom.com/ru/wiki/Fallout_2).
 
