--- a/docs/2. Основные понятия/6. Квесты.md
+++ b/docs/2. Основные понятия/6. Квесты.md
@@ -1,4 +1,4 @@
-![](../static/img/квесты.jpg)
+![](../../static/img/квесты.jpg)
 
 Еще одна полезная штука из РПГ игр, которая может пригодиться - квесты.
 
