--- a/docs/2. Основные понятия/8. Очки опыта.md
+++ b/docs/2. Основные понятия/8. Очки опыта.md
@@ -1,3 +1,3 @@
-![](../static/img/ОчкиОпыта.jpg)
+![](../../static/img/ОчкиОпыта.jpg)
 
 В РПГ Играх твой персонаж увеличивает свою силу и крутость посредством набора очков опыта, идею которых я считаю очень полезной для реальной жизни. Идея достижения целей на самом деле состоит в разбиении больших целей на крошечные шаги, каждый из которых немного продвигает тебя вперед к достижению крупной стратегической цели. Гики - коллекционеры! Они чертовски любят собирать: фильмы, коммиксы, рисунки и винтыжные предметы. Нам также нравится собирать игровые очки. Не важно для чего. Игровые очки - это круто! Достижение целей посредством числовых вознаграждений - это динамическая система достижений, чтобы получать больше очков в результате выполнения нужных дел и терять их если ты халтуришь.
