--- a/docs/2. Основные понятия/9. Уровни персонажа.md
+++ b/docs/2. Основные понятия/9. Уровни персонажа.md
@@ -1,4 +1,4 @@
-![](../static/img/Уровни.jpg)
+![](../../static/img/Уровни.jpg)
 
 В РПГ играх получение нового уровня является достижением определенного этапа в игре. Это как подняться на одну ступеньку выше. Это как подниматься вверх по лестнице вместо того, чтобы по веревке. Это - концентрат разбиения больших целей на мелкие подшаги!
 
