--- a/docs/3. Туториал/2. Твой первый уровень.md
+++ b/docs/3. Туториал/2. Твой первый уровень.md
@@ -1,3 +1,13 @@
+![](../../static/img/reboot.jpg)
+
+**Внимание! Начинается игра!**
+
+Это - первый шаг в твоем (супер)геройском пути! Давай начнем?!
+
+Сейчас ты находишься на... давай будем называть это место "Главное окно":
+
+!Главное окно
+
 Это - главное окно. Здесь обычно будет происходить все самое интересное. Но сейчас тут пусто.
 
 Если ты впервые запустил РПГ Органайзер, уже загрузился "тренировочный персонаж". Ты можешь посмотреть его, перейдя на "Экран персонажа":
