--- a/docs/4. Создание персонажа/1. Настройка перса.md
+++ b/docs/4. Создание персонажа/1. Настройка перса.md
@@ -1,16 +1,12 @@
----
-title: Основная инфа перса
----
-
 Готовься, дорогой УБИЙЦА ДРАКОНОВ, сейчас мы будем переносить твои цели в модель РПГ игры!
 
 На главной странице кликни по картинке перса:
 
-![](../static/img/openPersWindow)
+![](../../static/img/openPersWindow)
 
 Откроется экран персонажа, там **активируй "режим редактирования"**:
 
-![](../static/img/persWindow)
+![](../../static/img/persWindow)
 
 Заполни поля:
 
@@ -21,7 +17,7 @@ title: Основная инфа перса
 
 Как будет выглядеть твой герой? В режиме редактирования кликни по изображению и выбери подходящее из библиотеки картинок:
 
-![image-20210217104525999](../static/img/choosePers)
+![image-20210217104525999](../../static/img/choosePers)
 
 Ничего не подошло? Нажми "Путь из интернета" и вставь туда url изображения.
 
