--- a/docs/4. Создание персонажа/2. Настройка характеристик.md
+++ b/docs/4. Создание персонажа/2. Настройка характеристик.md
@@ -4,14 +4,14 @@
 
 Чтобы открыть функцию "карты ума" - на экране персонажа нажми здесь:
 
-![](../static/img/ОткрытьКартуУма.jpg)
+![](../../static/img/ОткрытьКартуУма.jpg)
 
 Затем тыкни по имени твоего персонажа, появятся кнопки действий. Нажми "добавить", чтобы создать характеристику.
 
-![](../static/img/ДобавитьХарактеристику.jpg)
+![](../../static/img/ДобавитьХарактеристику.jpg)
 
 Впиши название характеристики и нажми "Ок". Повтори, добавив остальные характеристики. У тебя получится что-то вроде этого:
 
-![](../static/img/ДобавленныеХарактеристики.jpg)
+![](../../static/img/ДобавленныеХарактеристики.jpg)
 
 Напоминаю - характеристики это основные качества, определяющие твою крутость. Ограничься 5-7 такими параметрами...
