--- a/docs/4. Создание персонажа/3. Настройка навыков.md
+++ b/docs/4. Создание персонажа/3. Настройка навыков.md
@@ -4,11 +4,11 @@
 
 Придумал? Тогда нажми на одну из характеристик, затем кнопку "добавить" и впиши название навыка.
 
-![](../static/img/ДобавлениеНавыка.md)
+![](../../static/img/ДобавлениеНавыка.md)
 
 Таким образом добавь несколько навыков к каждой характеристике. У меня получилось что-то вроде этого:
 
-![](../static/img/ДоавленныеНавыки.jpg)
+![](../../static/img/ДоавленныеНавыки.jpg)
 
 Я думаю, персонально для себя ты придумаешь что-то намного круче))
 
