--- a/docs/4. Создание персонажа/4. Наводим красоту.md
+++ b/docs/4. Создание персонажа/4. Наводим красоту.md
@@ -1,6 +1,6 @@
 Сейчас вернись на экран персонажа:
 
-![](../static/img/ВернисьНаЭкранПерсонажа.jpg)
+![](../../static/img/ВернисьНаЭкранПерсонажа.jpg)
 
 На основе "карты ума" у тебя будет настроенный персонаж со всеми характеристиками и навыками. Но можно сделать все еще чуть-чуть круче...
 
@@ -8,15 +8,15 @@
 
 Нажми на одну из характеристик:
 
-![](../static/img/НажмиНаОднуИзХарактеристик.jpg)
+![](../../static/img/НажмиНаОднуИзХарактеристик.jpg)
 
 Перейди в режим редактирования:
 
-![](../static/img/ПерейдиВРежимРедактирования.jpg)
+![](../../static/img/ПерейдиВРежимРедактирования.jpg)
 
 И донастрой следующие поля:
 
-![](../static/img/НастройкаХарактеристики.jpg)
+![](../../static/img/НастройкаХарактеристики.jpg)
 
 - **Описание характеристики** - что она представляет для тебя, чего поможет добиться, когда будет круто прокачана, за что она отвечает?
 - **Начальный уровень** - может быть у тебя уже есть какие-то успехи в этом качестве? Выбери начальное значение от 0 (полный лох) до 10 (невероятно крут).
@@ -28,7 +28,7 @@
 
 Не забудь сохранить! Нажми эту кнопку, когда все настроишь:
 
-![](../static/img/СохранитьИзменения.jpg)
+![](../../static/img/СохранитьИзменения.jpg)
 
 :::
 
@@ -36,7 +36,7 @@
 
 Также нажми на один из навыков персонажа... Вбей описание и картинку...
 
-![image-20210220164020898](../static/img/НастройкаНавыка.jpg)
+![image-20210220164020898](../../static/img/НастройкаНавыка.jpg)
 
 Не забудь сохранить))
 
