Подправлены названия глав

--- a/docs/1. Начало/3. Получение и настройка.md
+++ b/docs/1. Начало/3. Получение и настройка.md
@@ -1,6 +1,8 @@
-![Картинки по запросу "гном кузнец"](../../static/img/gnome_draft.jpg)
+---
+title: Получение и настройка
+---
 
-## Получение
+![Картинки по запросу "гном кузнец"](../../static/img/gnome_draft.jpg)
 
 Чтобы попасть во вселенную РПГ Органайзера - [перейди по секретной ссылке](https://rpgorganizer-72d0b.firebaseapp.com/). 
 
