--- a/docs/2. Основные понятия/11. Монстры.md
+++ b/docs/2. Основные понятия/11. Монстры.md
@@ -1,3 +1,7 @@
+---
+title: Монстры
+---
+
 ![](../../static/img/Монстры.jpg)
 
 В РПГ играх персонажи ежедневно сражаются с противниками. За удачные сражения они получают опыт и тем самым совершенствуются…
