--- a/docs/2. Основные понятия/7. Награды.md
+++ b/docs/2. Основные понятия/7. Награды.md
@@ -1,3 +1,7 @@
+---
+title: Награды
+---
+
 ![](../../static/img/награды.jpg)
 
 В героических сагах искателями приключений не всегда движет только лишь альтруизм и желание помочь ближним, а также жажда наживы, редких артефактов, золота и славы! Реальная жизнь ничем не лучше! Но и не хуже!
