--- a/docs/3. Туториал/3. Экран персонажа.md
+++ b/docs/3. Туториал/3. Экран персонажа.md
@@ -1,3 +1,7 @@
+---
+title: Экран персонажа
+---
+
 Это твой тренировочный перс) Чуть позже ты сможешь сделать своего)
 
 Но что сейчас интересно - у него уже полностью настроены характеристики/навыки/квесты/награды. Посмотри, как это все выглядит:
