--- a/docs/3. Туториал/4. Файт.md
+++ b/docs/3. Туториал/4. Файт.md
@@ -1,3 +1,7 @@
+---
+title: ФАЙТ!!!
+---
+
 Если ты проделал предыдущие шаги, в главном окне появится список заданий.
 
 Все задания условно можно разделить на:
