--- a/docs/4. Создание персонажа/2. Настройка характеристик.md
+++ b/docs/4. Создание персонажа/2. Настройка характеристик.md
@@ -1,3 +1,7 @@
+---
+title: Настройка характеристик
+---
+
 Делаем крупные мазки в твоем героическом портрете - настраиваем характеристики!
 
 Есть несколько способов это сделать, но я тебе покажу самый простой и наглядный. Начнем [Mind Mapping](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik)!
