--- a/docs/2. Основные понятия/1. Игрофикация.md
+++ b/docs/2. Основные понятия/1. Игрофикация.md
@@ -1,3 +1,7 @@
+---
+title: Игрофикация
+---
+
 ![Картинки по запросу "игрофикация"](../../static/img/Игрофикация.jpg)
 
 Главная фишка РПГ Органайзера - игрофикация.Такая штука, чтобы сделать твою личную прокачку интересным занятием.
