--- a/docs/2. Основные понятия/3. Характеристики.md
+++ b/docs/2. Основные понятия/3. Характеристики.md
@@ -1,3 +1,7 @@
+---
+title: Характеристики
+---
+
 ![](../../static/img/характеристики.jpg)
 
 Главная мера крутости персонажа в РПГ Играх - характеристики. 
