--- a/docs/2. Основные понятия/4. Навыки.md
+++ b/docs/2. Основные понятия/4. Навыки.md
@@ -1,3 +1,7 @@
+---
+title: Навыки
+---
+
 ![](../../static/img/навыки.jpg)
 
 Еще одна мера крутости в РПГ это навыки. Искусность в специфичных действиях вроде стрельбы из лука, магии земли, ношении доспехов, взлома и.т.д. 
