--- a/docs/2. Основные понятия/6. Квесты.md
+++ b/docs/2. Основные понятия/6. Квесты.md
@@ -1,3 +1,7 @@
+---
+title: Квесты
+---
+
 ![](../../static/img/квесты.jpg)
 
 Еще одна полезная штука из РПГ игр, которая может пригодиться - квесты.
