--- a/docs/3. Туториал/1. Тренировочный перс.md
+++ b/docs/3. Туториал/1. Тренировочный перс.md
@@ -1,3 +1,7 @@
+---
+title: Тренировочный перс
+---
+
 ![035](../../static/img/тренировочный_перс)
 
 При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, где можно будет опробовать все функции РПГ Органайзера. 
