--- a/docs/4. Создание персонажа/1. Настройка перса.md
+++ b/docs/4. Создание персонажа/1. Настройка перса.md
@@ -1,3 +1,7 @@
+---
+title: Настройка перса
+---
+
 Готовься, дорогой УБИЙЦА ДРАКОНОВ, сейчас мы будем переносить твои цели в модель РПГ игры!
 
 На главной странице кликни по картинке перса:
