--- a/docs/4. Создание персонажа/3. Настройка навыков.md
+++ b/docs/4. Создание персонажа/3. Настройка навыков.md
@@ -1,3 +1,7 @@
+---
+title: Настройка навыков
+---
+
 Как я говорил раньше, каждый навык будет "связан" с соответствующей характеристикой. Навыки развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса (чуть позже ты поймешь о чем это я).
 
 Сейчас посмотри на свою карту персонажа и подумай - как можно развивать добавленные характеристики? Например, силу можно развивать спортом, мышление - ежедневной игрой в шахматы или чтением умных книг, а здоровье - йогой и правильным питанием.
