--- a/docs/1. Начало/3. Получение и настройка.md
+++ b/docs/1. Начало/3. Получение и настройка.md
@@ -6,7 +6,7 @@ title: Получение и настройка
 
 Чтобы попасть во вселенную РПГ Органайзера - [перейди по секретной ссылке](https://rpgorganizer-72d0b.firebaseapp.com/). 
 
-:::danger ВНИМАНИЕ
+:::danger &nbsp;
 
 Работа гарантируется только в последних версиях Chrome.
 
@@ -28,7 +28,7 @@ title: Получение и настройка
 
 После этих действий "РПГ Органайзер" преобразуется в полноценное приложение! Чтобы открыть его - запусти из своего списка установленных программ.
 
-:::info Совет
+:::info &nbsp;
 
 Не хочешь заморачиваться с настройками? Просто скачай готовый apk-установщик, если планируешь пользоваться органайзером на устройстве под Android.
 
