--- a/docs/2. Основные понятия/3. Характеристики.md
+++ b/docs/2. Основные понятия/3. Характеристики.md
@@ -42,7 +42,7 @@ title: Характеристики
 - **Домовитость:**  Сфера Комфорта. Организация комфортной жизни. Да, из зоны комфорта нужно выходить, но для начала ее нужно создать))). Это - содержание/ремонт жилища, поддержание порядка, покупка автомобиля и пр.
 - **Воля:** Способность делать то что нужно, выполнять обещания и свой долг.
 
-:::info Совет
+:::info &nbsp;
 
 Подробнее про характеристики можно почитать [тут](http://nerdistway.blogspot.ru/2015/10/blog-post_9.html).
 
