--- a/docs/2. Основные понятия/4. Навыки.md
+++ b/docs/2. Основные понятия/4. Навыки.md
@@ -18,7 +18,7 @@ title: Навыки
 
 В самом простейшем объяснении под навыком мы будем принимать привычку. Хочешь изучить программирование? Если будешь кодить каждый день понемногу - будешь прокачивать навык. Забросишь - навык будет понижаться. Также и с "йогой", "английским", "боксом" и "бодибилдингом".
 
-:::info инфа!
+:::info &nbsp;
 
 Повторяющиеся задачи (привычки) развивают навыки!
 
@@ -43,7 +43,7 @@ title: Навыки
 | Бодибилдинг               | Сила           |
 |                           | и.т.д.         |
 
-:::info инфа!
+:::info &nbsp;
 
 Характеристики нельзя прокачивать напрямую, но можно их развивать, прокачивая навыки!
 
