--- a/docs/3. Туториал/4. Файт.md
+++ b/docs/3. Туториал/4. Файт.md
@@ -2,9 +2,103 @@
 title: ФАЙТ!!!
 ---
 
-Если ты проделал предыдущие шаги, в главном окне появится список заданий.
+![](../../static/img/файт)
+
+В главном окне появилось первое задание из списка заданий.
+
+![](../../static/img/первое_задание_из_списка_заданий)
+
+:::info &nbsp;
+Каждое задание - это монстр, которого нужно победить. С ростом уровня твоего перса задания будут усложняться, монстры крутеть. Даже их изображения будут меняться на более продвинутых противников, так что не стой на месте! Впереди еще много интересного!
+:::
 
 Все задания условно можно разделить на:
 
 - **Привычки** - повторяющиеся задачи, которые качают навыки.
 - **Дела** - миссии квестов. Задачи, которые двигают твои проекты и помогают достигать целей.
+
+Чтобы менять списки на отображение дел/привычек:
+
+![](../../static/img/менять_списки_задач)
+
+Ты можешь выбирать следующее/предыдущее дело свайпом влево/вправо. Если "зажать" по картинке задач, выберется первая из доступных в списке. Я верю, ты освоишься))
+
+Чтобы увидеть дела списком (или список доступных квестов), жми сюда:
+
+![](../../static/img/дела_списком)
+
+Чтобы отметить выполнение задачи (*сначала нужно сделать ее в реале*), жми на иконку "меч" (или свайп снизу вверх):
+
+![image-20210317091255062](../../static/img/выполнить_задачу)
+
+Если задача является привычкой, также доступен пропуск задачи. Жми "щит" (*или свайп сверху вниз*):
+
+![](../../static/img/пропуск_задачи)
+
+При выполнении/пропуске задач ты будешь получать очки опыта, продвигаться в квестах, получать награды... Ты и твой виртуальный аватар будете развиваться - иначе зачем мы тут?
+
+## Сортировка задач
+
+### Навыки
+
+Если ты сейчас находишься в режиме отображения "навыки", то заметишь, что все задачи перемешаны. А ведь для каждой привычки должно быть свое время. Хотя бы примерное))
+
+Чтобы указать время для задачи, просто щелкни по этому значку:
+
+!
+
+Или нажми сюда, чтобы увидеть все задачи за сегодняшний день:
+
+!
+
+А затем укажи время для них:
+
+!
+
+Или нажми сюда, чтобы увидеть вообще все доступные задачи:
+
+!
+
+И там тоже настрой время.
+
+Как видишь, способов много... Сделай это!
+
+Получилось? Теперь все задачи будут отсортированы как надо.
+
+### Сортировка квестов
+
+Если ты находишься в режиме "квесты", то тут тоже можно провести сорртировку. Сами квесты распределяются автоматом, но если ты нажмешь на один из них, откроется первая задача квеста. Свайпом вправо-влево ты можешь выбирать следующие, предыдущие задачи. А если нажмешь сюда:
+
+!
+
+Тогда можно "перетаскиванием" поменять порядок задач. В конце не забудь сохранить:
+
+!
+
+## Файт!!!
+
+А теперь давай уже приступим!
+
+Кстати, поздравляю! Ты уже выполнил самую первую задачу из тренировочного квеста "РПГ Органайзер"! Перейди в режим задач квестов (*если ты не там*):
+
+!
+
+Щелкни по первому (и пока единственному) квесту.
+
+!
+
+А теперь отметь выполнение первой задачи (*ты ведь уже распределил очки навыков, правда?*). Нажми "меч" или свайпни снизу вверх:
+
+!
+
+Ура! Теперь прочитай следующее задание:
+
+!
+
+Перейди режим "навыки" и выполни первую задачу в реале... Круто! Теперь вернись в квесты и отметь это!... Как то так)))
+
+И последнее задание туториала - тебе нужно достичь первого уровня. Для этого нужно выполнить все задачи навыков за сегодняшний день. Сделай это! Я в тебя верю)))
+
+Кстати, когда ты выполнишь все задания квеста, тебя перекинет на его экран, где нужно будет вручную отметить его завершение. Не забудь!
+
+!
