--- a/docs/4. Создание персонажа/1. Настройка перса.md
+++ b/docs/4. Создание персонажа/1. Настройка перса.md
@@ -2,13 +2,31 @@
 title: Настройка перса
 ---
 
-Готовься, дорогой УБИЙЦА ДРАКОНОВ, сейчас мы будем переносить твои цели в модель РПГ игры!
+Готовься, дорогой УБИЙЦА ДРАКОНОВ, сейчас мы будем переносить твои цели в модель РПГ игры! Это уже - высший пилотаж!
+
+Я уверен, что ты итак прекрасно знаешь, что тебе делать для того, чтобы стать мега крутым парнем/девченкой. Но если хочешь совета - добро пожаловать в мой блог) И напоминаю - если будут вопросы - смело задавай их в телеграмме.
+
+Ладно, создаем персонажа...
 
 На главной странице кликни по картинке перса:
 
 ![](../../static/img/openPersWindow)
 
 Откроется экран персонажа, там **активируй "режим редактирования"**:
+
+![](../../static/img/persWindow)
+
+Для начала, нужно нажать "новая игра", чтобы все тренировочные данные очистились:
+
+!
+
+Кстати, есть еще кнопка "респаун":
+
+!
+
+Это на крайний случай, если ты вдруг в какой то момент решишь начать игру сначала, но при этом сохранить все настройки персонажа.
+
+Снова **активируй "режим редактирования"**:
 
 ![](../../static/img/persWindow)
 
@@ -25,6 +43,6 @@ title: Настройка перса
 
 Ничего не подошло? Нажми "Путь из интернета" и вставь туда url изображения.
 
-:::caution ВНИМАНИЕ
+:::caution &nbsp;
 Не забудь сохранить!!! Снова нажми на шестеренку в правом нижнем углу!
 :::
