--- a/docs/4. Создание персонажа/2. Характеристики.md
+++ b/docs/4. Создание персонажа/2. Характеристики.md
@@ -1,10 +1,12 @@
 ---
-title: Настройка характеристик
+title: Характеристики
 ---
 
 Делаем крупные мазки в твоем героическом портрете - настраиваем характеристики!
 
-Есть несколько способов это сделать, но я тебе покажу самый простой и наглядный. Начнем [Mind Mapping](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik)!
+Для начала ответь на вопрос - "Чего ты хочешь?". Такие характеристики и добавляй. Хочешь быть умным и сильным - тогда "сила" и "ум". Хорошо себя чувствовать - тогда "выносливость" или "здоровье". Или может быть "уверенность", "мудрость" или "боевой дух"? Ты сам решаешь)))
+
+Есть несколько способов добавить характеристики, но я тебе покажу самый простой и наглядный. Начнем [Mind Mapping](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik)!
 
 Чтобы открыть функцию "карты ума" - на экране персонажа нажми здесь:
 
