--- a/docs/4. Создание персонажа/3. Навыки.md
+++ b/docs/4. Создание персонажа/3. Навыки.md
@@ -1,5 +1,5 @@
 ---
-title: Настройка навыков
+title: Навыки
 ---
 
 Как я говорил раньше, каждый навык будет "связан" с соответствующей характеристикой. Навыки развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса (чуть позже ты поймешь о чем это я).
@@ -16,7 +16,7 @@ title: Настройка навыков
 
 Я думаю, персонально для себя ты придумаешь что-то намного круче))
 
-:::info Совет
+:::info &nbsp;
 
 Если ты хочешь избавиться от какой-то вредной привычки, напиши ее название в "достигательном виде". Например - "сопротивление фастфуду/курению/порно..." 
 
