--- a/docs/4. Создание персонажа/4. Наводим красоту.md
+++ b/docs/4. Создание персонажа/4. Наводим красоту.md
@@ -28,7 +28,7 @@ title: Наводим красоту
 - **Навыки** - может быть нужно добавить еще навыков?
 - Повтори эти действия с остальными характеристиками...
 
-:::warning внимание!
+:::warning &nbsp;
 
 Не забудь сохранить! Нажми эту кнопку, когда все настроишь:
 
