--- a/docs/3. Туториал/1. Тренировочный перс.md
+++ b/docs/3. Туториал/1. Тренировочный перс.md
@@ -4,8 +4,8 @@ title: Тренировочный перс
 
 ![035](../../static/img/тренировочный_перс)
 
-При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, где можно будет опробовать все функции РПГ Органайзера. 
+При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, с которым можно опробовать все функции РПГ Органайзера. 
 
 Но в будущем мы будем стремиться, чтобы ты сделал все под себя)))
 
-Сейчас мы с тобой пройдем небольшой туториал, где ты попробуешь все, что есть в РПГ Органайзере и решишь - действительно ли ты готов к прокачке в реале!
+Сейчас мы пройдем небольшой туториал, где ты попробуешь все, что есть в РПГ Органайзере и решишь - действительно ли ты готов к прокачке в реале?!
