--- a/docs/3. Туториал/3. Экран персонажа.md
+++ b/docs/3. Туториал/3. Экран персонажа.md
@@ -2,87 +2,109 @@
 title: Экран персонажа
 ---
 
-Это твой тренировочный перс) Чуть позже ты сможешь сделать своего)
+Надеюсь, ты уже перешел на экран персонажа? Это твой тренировочный перс) Чуть позже ты сделаешь своего)
 
 Но что сейчас интересно - у него уже полностью настроены характеристики/навыки/квесты/награды. Посмотри, как это все выглядит:
 
-!Экран персонажа
+![](../../static/img/тренировочный_перс_экран_перса)
 
-Также есть такая крутая штука - карта ума - там ты можешь наглядно увидеть все характеристики/навыки перса.
+Еще есть крутая штука - карта ума - ты можешь наглядно увидеть все аттрибуты твоего перса.
 
-!Карта ума
+![](../../static/img/тренировочный_перс_переход_на_карту_ума)
+
+![](../../static/img/тренировочный_перс_карта_ума)
 
 ## Распределение очков навыков
 
-Чтобы твоя прокачка была постепенной и непрерывной (другие варианты к сожалению не работают), тебе на каждом уровне будет даваться некоторое количество очков навыков (ОН), на которые ты сможешь открывать и развивать умения. С каждым новым уровнем умений тебе будут выдаваться более сложные задания, а ты будешь становиться все круче и круче:
-- На 1 уровне тебе будет доступно 5 ОН
-- На каждом следующем уровне персонажа +1 ОН
-- Каждые 5 уровней дополнительно +1 ОН
+Чтобы в главном окне появились задания, и ты смог повышать свой уровень в реале - нужно открыть навыки. Для этих целей есть очки прокачки.
+
+В начале игры, а также с получением нового уровня перса ты будешь получать немного очков. В зависимости от общего количества навыков у твоего перса, количество очков прокачки будет варьироваться так, чтобы к 100 уровню ты смог полностью раскрыть все твои таланты! Очки навыков - очень важная вещь. Они позволяют добиться постепенности развития - единственный вариант, который работает в реальной жизни (и штука, которая так нравится нам в РПГ).
 
 Сейчас тебе нужно будет "прокачать" несколько навыков, чтобы в главном окне у тебя появились задачи и ты мог "качаться в реале".
 
 Чтобы сделать это - на экране персонажа просто нажми на "стрелочку вверх" напротив навыка, который бы ты хотел бы в себе развить:
 
-!прокачать навык
+![](../../static/img/тренировочный_перс_прокачать_навык)
 
-Обрати внимание, если ты как бы "открыл" его (до этого он был на 0 уровне), то тебя перекинет на страничку его настройки, где ты сможешь подкорректировать его название, описание и... самое главное... настроить постепенность его прокачки!!!
+Обрати внимание, если до этого он был на 0 уровне, то тебя перекинет на страничку его настройки, где ты сможешь подкорректировать его название, описание, картинку и... самое главное... настроить прокачку навыка по уровням!!!
 
-## Постепенность прокачки навыков
+## Прогрессия рулит
 
 Так как мы сейчас пользуемся тренировочным персом, все уже настроено, но в дальнейшем тебе придется делать это самому.
 
-Итак, постепенность прокачки - это САМАЯ ВАЖНАЯ ШТУКА РПГ ОРГАНАЙЗЕРА! Это то, что особенно отличает его от других похожих приложений. Именно эта функция делает его таким эффективным в деле приобретения привычек и развития навыков.
+Прокачка навыков по уровням - это САМАЯ ВАЖНАЯ ШТУКА РПГ ОРГАНАЙЗЕРА, которая обеспечивает постепенность прокачки! Это то, что особенно отличает его от других похожих приложений. Именно эта функция делает его таким эффективным в деле приобретения привычек и развития навыков.
 
-Как работает постепенность прокачки лучше всего объяснить на примере...
+Ты помнишь, что в играх прокачка происходит постепенно? Сначала ты можешь пульнуть слабенький файербол на близкое расстояние, а позже - серию гигантских огненных шаров, испепеляющих толпы врагов. Также и в реальной жизни! Очень круто развивать свои навыки постепенно, начав с чего-то очень простого и постепенно увеличивая сложность.
 
-Например, ты хочешь приобрести такой навык, как "ежедневное чтение". Обычно все пытаются приобретать новую привычку сразу, по максимуму. Например, планируют читать каждый день по 60 минут.. Поначалу все идет хорошо, но потом наступает трудный день, появляется много работы/учебы, а привычка то еще не сформировалась... Пропускают один день, потом другой, и уже возвращаются к тому, с чего начинали. Но у нас другой путь!
+Прогрессия рулит! Качки прекрасно об этом знают! Как там в тренажерке? В самом начале туда приходит тщедушный дохляк, который делает жим лежа пустого грифа штанги всего пару раз. А потом, постепенно добавляя по чуть-чуть повторы, подходы и веса - он преображается в крутого бодибилдера!
+
+Вот и привычки/навыки мы тоже будем развивать постепенно. Помнишь, что навыки делятся на уровни от 0 до 10? Каждая задача на каждом уровне навыка будет иметь свои различные качества (сложность). Чтобы настроить постепенность, нужно определиться в чем измеряться прогресс в навыке. Например, крутость в медитации измеряется в минутах, а подтягиваний в количестве раз, пробежка - в количеств километров, а чтение - в прочитанных страницах или минутах сосредоточенного чтения.
+
+Давай еще пример...
+
+Например, ты хочешь приобрести такой навык, как "чтение умных книг". Обычно все пытаются приобретать новую привычку сразу, по максимуму. Например, планируют читать каждый день по 60 минут.. Поначалу все идет хорошо, но потом наступает трудный день, появляется много работы/учебы, а привычка то еще не сформировалась... Пропускают один день, потом другой, и уже возвращаются к тому, с чего начинали. Но у нас другой путь!
 
 Мы постараемся разделить каждый навык на этапы. Конкретно их будет 10. И тогда на первом уровне нужно будет заниматься чтением всего 6 минут, на втором 12 и.т.д.
 
+Я знаю ты можешь больше. Я верю, что можешь больше. Но наша цель - приобрести привычку, не пропускать.
+
 Сначала тебе нужно будет выполнить действие настолько простое, что глупо его не выполнять, а потом, когда привычка будет более крепкой, ты будешь добавлять сложность. Этот способ реально хорошо работает) Опробовал на себе)))
 
-Вот так, например будет выглядеть разпределение по уровням в навыке чтение:
+Этот способ дает сразу несколько преимуществ. Во-первых, ты привыкаешь делать то, что задумал. Во-вторых, ты отвыкаешь быть неудачником. В-третьих, ты становишься крутым парнем (девчонкой), который всегда побеждает)))
 
-!Распределение по уровням в навыке чтение
+Вот так, например будет выглядеть прокачка по уровням навыка "чтение":
 
-Так как у тебя уже загружен "тренировочный перс", ты можешь посмотреть как там все это настроено, пощелкав по навыкам. Каждый уровень - ступенька, которую нужно преодолеть, а подниматься вверх по ступенькам намного проще, чем по отвесной стене))
+![](../../static/img/тренировочный_перс_навык_чтение)
 
-Сейчас тебе просто достаточно уяснить, что прокачка в РПГ Органайзере постепенная, а как это все настраивать мы изучим, когда будем создавать своего персонажа!
+Так как у тебя уже загружен "тренировочный перс", посмотри как там все это настроено, пощелкав по другим навыкам. Сейчас тебе просто достаточно уяснить, что прокачка в РПГ Органайзере постепенная, а подробно как все настраивать ты узнаешь, когда будем создавать своего персонажа!
 
-## Стоимость прокачки навыков
+## Стоимость прокачки
 
-Не все навыки одинаковые. Они могут быть "обычные", могут быть "сложные", "очень сложные" и "Перки".
+Не все навыки одинаковые. Они могут быть "обычные", могут быть "сложные", "очень сложные" и "Перки". Перки - это такие навыки, которые не делятся на уровни прокачки. Бывает, нужно сделать и такое, настойка перса - очень творческий процесс. Что будет перком, а что навыком - тебе решать.
 
-Перки - это такие навыки, которые не делятся на уровни сложности. Бывает, нужно сделать и такую настройку.
+В зависимости от сложности прокачка стоит разное количество очков. Обычный навык - 1 за уровень, сложный - 2, очень сложный - 3. Обычный перк стоит 10 очков, сложный 20, очень сложный - 30.
 
-В зависимости от сложности навыки стоят разное количество очков прокачки. Обычный - 1 за уровень, сложный - 2, очень сложный - 3. Обычный перк стоит 10 очков, сложный 20, очень сложный - 30.
-
-Если у тебя есть хотя бы одно очко прокачки, ты можешь его использовать, но если стоимость прокачки наввыка/перка будет больше, чем у тебя имеется, количество очков навыков примет отрицательное значение. Это как такой своеобразный кредит)) Почему я это сделал? Так интереснее)))
+Если у тебя есть хотя бы одно очко прокачки, ты можешь его использовать, но если стоимость прокачки навыка/перка будет больше, чем у тебя есть, количество очков навыков примет отрицательное значение. Это как своеобразный кредит)) Почему так? Получается интереснее)))
 
 ## Прокачай другие навыки
 
 Наверное у тебя осталось еще немного очков навыков? Отлично! Ты можешь повысить уровень уже открытого, либо открыть/прокачать еще несколько.
 
+> **Подсказка**
+>
+> Чем выше уровень навыка, тем больше игровых очков он будет приносить!
+
 Распредели оставшиеся очки, у тебя получится что-то вроде этого:
 
-!что то вроде этого
+![](../../static/img/тренировочный_перс_навыки_прокачаны)
 
 ## Исследуем дальше
 
-С навыками, характеристиками и очками прокачки мы разобрались, давай теперь еще немного поисследуем экран персонажа...
+С навыками, характеристиками и очками прокачки мы разобрались, давай еще немного поисследуем экран персонажа...
 
 Помимо основной инфы о персе, здесь также есть возможность настроить квесты и награды.
 
 Квесты настраиваются на этой вкладке:
 
-!вкладка квестов
+![](../../static/img/вкладка_квесты)
+
+Квесты - это твои цели, проекты. Средство для группировки дел. Ведь не всегда искатель приключений занимается только лишь прокачкой себя, иногда нужно и дела делать. Принцесс спасать)))
 
 А награды тут:
 
-!вкладка наград
+![](../../static/img/вкладка_награды)
+
+Когда ты будешь получать награды, они попадут сюда. Можно сказать, что это - инвентарь твоего перса.
 
 Чтобы посмотреть все настроенные награды - перейди в режим редактирования:
 
-!смотреть награды
+![](../../static/img/переход_в_режим_редактирования)
 
-Ну что, приступаем к приключениям?
+И увидишь:
+
+![](../../static/img/тренировочный_перс_награды)
+
+Ну что, приступаем к прокачке? Чтобы увидеть задания, которые будут поднимать твой уровень, что даст тебе новые очки прокачки, вернись на главный экран:
+
+![](../../static/img/кнопка_назад)
+
